Bug 417311 - Warning suggests to click on klipper and select an option that does not exist
Summary: Warning suggests to click on klipper and select an option that does not exist
Status: RESOLVED FIXED
Alias: None
Product: klipper
Classification: Unmaintained
Component: plasma-widget (other bugs)
Version First Reported In: 5.17.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-08 17:21 UTC by Patrick Silva
Modified: 2021-04-01 19:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments
screenshot (241.58 KB, image/png)
2020-02-08 17:21 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-02-08 17:21:32 UTC
Created attachment 125769 [details]
screenshot

STEPS TO REPRODUCE
1. make sure "Enable MIME-based actions" is enabled in klipper settings
2. copy a url to your clipboard
3. click on systray icon of klipper and edit the just copied url (a popup shows up)
4. click on "Disable this popup"

OBSERVED RESULT
a warning says "You can enable URL actions later by left-clicking on the Klipper icon and selecting 'Enable Clipboard Actions'". As we can see in the attached screenshot, there is no "Enable clipboard actions" option
after we left-click on klipper.

EXPECTED RESULT
the warning should not mention an option that does not exist

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.17.90
KDE Frameworks Version: 5.66.0
Qt Version: 5.14.1
Comment 1 Nate Graham 2021-04-01 19:29:35 UTC
Git commit eeb294f5e01cdf5023c00ea2af92eee990498c3f by Nate Graham.
Committed on 01/04/2021 at 19:28.
Pushed by ngraham into branch 'master'.

[klipper] Fix obsolete reference to non-existent UI element
FIXED-IN: 5.22

M  +4    -2    klipper/klipper.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/eeb294f5e01cdf5023c00ea2af92eee990498c3f