[klipper] Fix obsolete reference to non-existent UI element

BUG: 417311
FIXED-IN: 5.22